# metaxu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: USE_CASES.md
docs/adr/: 0001-terminology-validation.md  0002-adapter-strategy.md
examples/anticoagulation/: policies.json  run_demo.py  synthetic_fhir.py
examples/cdshooks/: run_demo.py
examples/composition/: run_demo.py
spec/: ARTIFACT.md  EVENT_MODEL.md
src/metaxu/: __init__.py  artifact.py  cli.py  dashboard.py  drift.py  events.py  governance.py  graph.py  instrument.py  mcp_proxy.py  merge.py  policy.py  provenance.py  replay.py  safety.py  session.py  terminology.py  trust.py
src/metaxu/adapters/: __init__.py  cdshooks.py  mcp.py  otel.py
src/metaxu/spec/: assurance-artifact.schema.json
tests/: fake_mcp_server.py  replay_runner.py  test_cdshooks.py  test_drift.py  test_example.py  test_example_composition.py  test_governance.py  test_graph.py  test_mcp_proxy.py  test_merge.py  test_otel.py  test_policy.py  test_policy_v2.py  test_replay_cli.py  test_replay_harness.py  test_safety_trust.py  test_session.py  test_terminology.py
