[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metaxu"
version = "0.3.0"
description = "An AI assurance and provenance layer for healthcare — model-agnostic, agent-agnostic, EHR-agnostic."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Metaxu Contributors" }]
keywords = [
    "healthcare",
    "ai",
    "assurance",
    "provenance",
    "fhir",
    "audit",
    "trust",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
# The core SDK is intentionally dependency-free (stdlib only).
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
schema = ["jsonschema>=4.0"]
dev = ["pytest>=8.0", "pyyaml>=6.0", "jsonschema>=4.0"]

[project.urls]
Homepage = "https://github.com/Hefrock/metaxu"
Repository = "https://github.com/Hefrock/metaxu"
Issues = "https://github.com/Hefrock/metaxu/issues"
Changelog = "https://github.com/Hefrock/metaxu/blob/main/CHANGELOG.md"

[project.scripts]
metaxu = "metaxu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"metaxu.spec" = ["*.json"]
"metaxu" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
